--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,11 @@ font-style: italic;
   background-color: transparent;
 }
 
+#search {
+        border: 1px solid #ccc;
+        border-radius: 25px; 
+        overflow: hidden; 
+    }
 
 @media(max-width:506px){
   .login{
