--- a/styles.css
+++ b/styles.css
@@ -444,3 +444,9 @@ font-style: italic;
 .image{
   margin-top: 10px;
 }
+
+.change-image{
+  border: 1px solid black;
+  border-radius: 50px;
+  padding: 0;
+}
