--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ font-style: italic;
   height: 400px;
 }
 
-.blog-card:hover,.user-card:hover,.profile-card:hover{
+.blog-card:hover,.user:hover,.profile-card:hover{
     background-color: #dddddd;
 }
 
@@ -467,9 +467,9 @@ font-style: italic;
   left: 20%;
 }
 
-.circle {
-  width: 70px; 
-  height: 70px;
+.profile-all {
+  width: 70px !important; 
+  height: 70px !important;
 }
 
 @media (max-width: 450px) {
@@ -479,8 +479,8 @@ font-style: italic;
 }
 
 @media (max-width: 360px) {
-  .circle{
-    width: 50px; 
-   height: 50px;
+  .profile-all{
+    width: 50px !important; 
+   height: 50px !important;
   }
 }
