--- a/styles.css
+++ b/styles.css
@@ -484,6 +484,12 @@ font-style: italic;
   height: 70px !important;
 }
 
+.submit{
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+}
+
 @media (max-width: 450px) {
   .img {
     left: 10%;
