--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ body{
   width: 100%;
 }
 
-
 button{
   cursor: pointer;
   background-color: red;
@@ -24,7 +23,7 @@ button{
 button:hover,.btn:hover,.modal-close:hover{
   color: #747474 !important;
 }
-  .brand{
+.brand{
     background: #cbb09c !important;
 }
 .brand-text{
@@ -121,8 +120,6 @@ font-style: italic;
 .login-page {
   display: grid;
   place-items: center;
-  margin: 0;
-  padding: 0;
   background-image: url(./images/pencils.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -130,13 +127,13 @@ font-style: italic;
   animation: pan 6s infinite alternate linear;
   height: 100vh; 
   width: 100%; 
-  margin: 0;
-  overflow: scroll;
+  overflow: hidden;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  margin: 0;
+  margin: 0 !important;
   padding: 0;
  }
 
@@ -306,7 +303,8 @@ font-style: italic;
     font-size: small;
 }
 
-.placeholder{ position: absolute !important; left: 3% !important; } .profile-placeholder{ position: absolute !important; left: 5% !important; }
+.placeholder{ position: absolute !important; left: 3% !important; } 
+.profile-placeholder{ position: absolute !important; left: 5% !important; }
 
 @media (max-width: 800px) {
   #nav-mobile {
@@ -369,13 +367,13 @@ font-style: italic;
     margin: 0;
     width: 300px;
   }
-  .placeholder{
+  .placeholder,.profile-placeholder{
       font-size: small !important;
   }
 }
 
 @media (max-width: 369px) {
- .placeholder{
+ .placeholder,.profile-placeholder{
       font-size: x-small !important;
   }
 }
@@ -400,7 +398,7 @@ font-style: italic;
 @media (max-width: 328px) {
   .login-card {
     margin: 0;
-    width: 270px;
+    width: 240px;
   }
 }
 
@@ -408,13 +406,6 @@ font-style: italic;
   .login-card {
     margin: 0;
     width: 250px;
-  }
-}
-
-@media (max-width: 310px) {
-  .login-card {
-    margin: 0;
-    width: 240px;
   }
 }
 
