--- a/styles.css
+++ b/styles.css
@@ -37,12 +37,14 @@ button:hover,.btn:hover,.modal-close:hover{
     left: 50%;
     transform: translateX(-50%);
 }
-.quill{
-    width: 100px;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%);
-}
+ .quill{
+  max-width: 100%; 
+  max-height: 150px;
+  width: auto; 
+  height: auto; 
+  display: block; 
+  margin: 0 auto; 
+} 
   .buttons {
 display: flex;
 gap: 20px;
@@ -337,14 +339,14 @@ font-style: italic;
   .quill{
     display: none !important;
   }
-  .favicon{
+   .favicon{
     display: block !important;
-    height: 50px;
-    width: 50px;
+    height: 100px;
+    width: 90%;
     margin-left: 50%;
     transform: translate(-50%);
     margin-bottom: 20px;
-  }
+  } 
   #category{
     display: none !important;
   }
@@ -387,8 +389,8 @@ font-style: italic;
     font-size: small;
   }
   .favicon{
-    height: 30px;
-    width: 30px;
+    height: 90px;
+    width: 100%;
     margin-bottom: 10px;
 
   }
@@ -445,15 +447,22 @@ font-style: italic;
   margin-top: 10px;
 }
 
+.featured-text{
+  padding-left: 5%;
+}
+#featured-image{
+  margin-bottom: -50px;
+  margin-left: 7px;
+}
 .change-image{
   border: 1px solid black;
   border-radius: 50px;
   padding: 0;
   background-color: white;
+  max-width: 275px;
 }
 
 .change-image:hover{
-    background-color: white;
     background-color: #dddddd;
 }
 
