--- a/styles.css
+++ b/styles.css
@@ -507,3 +507,16 @@ font-style: italic;
   margin: 0 !important;
   padding: 0 !important;
 }
+
+.custom-file-upload {
+  cursor: pointer;
+  background-color: #f0f0f0;
+  padding: 8px 12px;
+  border-radius: 4px;
+  border: 1px solid grey;
+  margin-left: 7px;
+}
+
+.custom-file-upload:hover {
+  background-color: #e0e0e0;
+}
