--- a/styles.css
+++ b/styles.css
@@ -283,6 +283,15 @@ font-style: italic;
   display: none !important;
 }
 
+.faviconTwo{
+  max-width: 100%; 
+  max-height: 100px;
+  width: auto; 
+  height: auto; 
+  display: block !important; 
+  margin: 0 auto; 
+}
+
 #deleteAccountForm{
     font-size: small;
 }
