--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,7 @@ body{
 
 button{
   cursor: pointer;
-  background-color: red;
   padding: 5px;
-  font-size: larger;
   border-radius: 5px;
 }
 button:hover,.btn:hover,.modal-close:hover{
@@ -446,10 +444,7 @@ font-style: italic;
 .featured-text{
   padding-left: 5%;
 }
-#featured-image{
-  margin-bottom: -50px;
-  margin-left: 7px;
-}
+
 .change-image{
   border: 1px solid black;
   border-radius: 50px;
@@ -504,6 +499,48 @@ font-style: italic;
   padding: 0 !important;
 }
 
+.delete_featured_image{
+    font-size: small;
+    color: red;
+    font-family: poppins;
+    padding-top: 10px !important;
+}
+
+#featured_image_input{
+    font-size: small !important;
+}
+
+@media(min-width: 404px){
+    
+    .featured-image{
+        max-width: 500px;
+    }
+
+.flex-featured {
+    display: flex;
+    justify-content: space-between; 
+}
+
+.featured-item {
+    margin-right: 10px; 
+}
+
+.delete_featured_image{
+    margin-top: -13px !important;
+}
+
+}
+
+
+@media(max-width: 404px){
+
+.delete_featured_image{
+    margin-top: 10px;
+}
+
+}
+
+
 .custom-file-upload {
   cursor: pointer;
   background-color: #f0f0f0;
@@ -511,6 +548,7 @@ font-style: italic;
   border-radius: 4px;
   border: 1px solid grey;
   margin-left: 7px;
+  font-size: small !important;
 }
 
 .custom-file-upload:hover {
