--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;800&family=VT323&');
-
+    
 *{
     font-family: poppins, consolas;
 }
@@ -67,7 +67,7 @@ font-style: italic;
   height: 400px;
 }
 
-.blog-card:hover,.user:hover,.profile-card:hover{
+.blog-card:hover,.user:hover,.profile-card:hover, .personal-blog-card:hover{
     background-color: #dddddd;
 }
 
@@ -704,6 +704,10 @@ font-style: italic;
     font-weight: bold;
 }
 
+.card{
+    box-shadow: none !important;
+}
+
 @media(max-width:500px){
 .info h4 {
   word-break: break-word !important; /* Breaks long words to the next line */
@@ -743,4 +747,10 @@ font-style: italic;
     .notification-dropdown{
         margin-left: -20px
     }
+}
+
+@media(max-width:340px){
+.both-dropdowns{
+    left: 20% 
+}
 }
