--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,11 @@ button{
 button:hover,.btn:hover,.modal-close:hover{
   color: #747474 !important;
 }
+.buttons {
+  display: flex;
+  gap: 20px;
+  margin-top: 50px;
+  }
 .brand{
     background: #cbb09c !important;
 }
@@ -35,6 +40,9 @@ button:hover,.btn:hover,.modal-close:hover{
     left: 50%;
     transform: translateX(-50%);
 }
+hr {
+  border: 1px solid #CBB09C;
+}
  .quill{
   max-width: 100%; 
   max-height: 150px;
@@ -43,11 +51,6 @@ button:hover,.btn:hover,.modal-close:hover{
   display: block; 
   margin: 0 auto; 
 } 
-  .buttons {
-display: flex;
-gap: 20px;
-margin-top: 50px;
-}
 
 .feedback{
 margin-top: 50px;
@@ -67,8 +70,13 @@ font-style: italic;
   height: 400px;
 }
 
-.blog-card:hover,.user:hover,.profile-card:hover, .personal-blog-card:hover{
-    background-color: #dddddd;
+.blog-card:hover,.user:hover,.profile-card:hover, .personal-blog-card:hover, .card-link .card:hover, .conversation-card-link .card:hover{
+    background-color: #dddddd !important;
+}
+.conversation-card-link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
 }
 
 .blog-card-content {
@@ -329,9 +337,6 @@ font-style: italic;
   }
   .sidenav-trigger{
       display: block !important;
-    position: absolute !important;
-  top: 0 !important;
-  right: 10px;
   }
   #message-notifications-dropdown{
     position: absolute;
@@ -388,7 +393,6 @@ font-style: italic;
   #category{
     display: none !important;
   }
-
 }
 
 .header{
@@ -652,6 +656,11 @@ font-style: italic;
   flex-direction: row;
   column-gap: 5px
 }
+
+.btn{
+box-shadow: none !important;
+}
+
 #message-notifications-dropdown-list{
     overflow: visible
 }
